WE-8441 - new scalafmt version and formatting

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,33 @@
-version = "1.5.1"
-style = defaultWithAlign
+version = 3.6.1
+runner.dialect = scala212
+
 maxColumn = 150
-align.tokens.add = ["as"]
+
+preset = defaultWithAlign
+
+align {
+  openParenCallSite = true
+  openParenDefnSite = true
+  preset = most
+  multiline = false
+  arrowEnumeratorGenerator = false
+  tokenCategory = {}
+}
+
+indentOperator.exemptScope = aloneEnclosed
+
+danglingParentheses {
+  callSite = false
+  defnSite = false
+}
+
+newlines {
+  source = keep
+  beforeMultiline = keep
+  beforeTypeBounds = keep
+  afterCurlyLambdaParams = keep
+  avoidForSimpleOverflow=[slc]
+}
+
+rewrite.trailingCommas.style = keep
+docstrings.style = keep
